public/css/home.css
/* ... */
#fifth-body {
    /* Color */
    background-color: #f2f4f3;

    /* Display & Box Model */
    border-bottom: 4px solid #d9dada;
}

#sixth-body {
    /* Color */
    background-color: #f4efe9;
}

/* Carousel Overrides */

.carousel-control.left {
    /* Display & Box Model */
    background-image: none;
}

.carousel-control.right {
    /* Display & Box Model */
    background-image: none;
}

.carousel-indicators .active {
    /* Color */
    background-color: #ed145b;
}

.carousel-indicators {
    /* Display & Box Model */
    bottom: 0px !important;
}

/* RSVP Modal */
#rsvpModal {
    /* Text */
    font-family: "Raleway", sans-serif;
}



/*
 * WEDDING PARTY STYLING
 */

 #fifth-body {
     /* Color */
     background-color: #fcf4e3;

     /* Display & Box Model */
     margin: 0;
 }

 .groomsmen-temp {
     background-image: url('../images/groomsmen_brush.png');
     background-size: 100% 100%;
     background-repeat: no-repeat;
     width: 80%;
     width: 373px; 
     height: 250px;
     margin: 0 auto;
     margin-top: 20px;
     margin-bottom: 20px;
     padding-top: 15px;
 }

 .bridesmaids-temp {
     background-image: url('../images/bridesmaid_brush.png');
     background-size: 100% 100%;
     background-repeat: no-repeat;
     width: 80%;
     height: 250px;
     width: 373px;
     margin: 0 auto;
     margin-top: 20px;
     margin-bottom: 20px;
     padding-top: 15px;
 }

.wedding-image-holder { 
    /* Display & Box Model */
    margin: 0 auto;
    height: 200px;
    width: 200px; 
}

.wedding-party-image {
    /* Display & Box Model */
    border: 2px solid black;
    height: 180px; 
    width: 180px;

    /* Positioning */
    position: absolute;
    z-index: 1;
}

.wedding-party-token {
    /* Display & Box Model */
    border: 2px solid black;
    height: 80px; 
    width: 80px;
    margin: 0 auto;
    transition: border 0.5s ease, box-shadow 0.5s ease;
}

.guy .wedding-party-token:hover {
    border: 4px solid #b7cdb8;
    box-shadow: 3px 5px rgba(0, 0, 0, 0.55);
}

.girl .wedding-party-token:hover {
    border: 4px solid #d2dbec;
    box-shadow: 3px 5px rgba(0, 0, 0, 0.55);
}

.current-guy {
    /* Positioning */
    z-index: 3;
}

.current-girl {
    /* Positioning */
    z-index: 3;
}

.huge {
    /* Text */
    font-size: 38px;
    margin-top: 10px !important;
}

.guy-postcard {
    /* for reference background-color: #88A48B; */
    color: white;
    background-image: linear-gradient( rgba(136, 164, 139, 0.4), rgba(136, 164, 139, 0.4)), url("../images/post_card_bg.jpg");
    background-size: cover;
    background-repeat: no-repeat;
}

.girl-postcard {
    /* for reference background-color: #7C918C; */
    color: white;
    background-image: linear-gradient( rgba(124, 145, 140, 0.4), rgba(124, 145, 140, 0.4)), url("../images/post_card_bg.jpg");
    background-size: cover;
    background-repeat: no-repeat;
}

.wedding-party-list {
    /* Text */
    font-size: 14px;
    
    /* Display & Box Model */
    float: left;
    list-style-type: none;
    margin: 0 auto;
    overflow: hidden;
    padding: 0;
    width: 100%;

    /* Positioning */
    position: inline;
}

.wedding-party-list li a {
    /* Color */
    color: white;

    /* Display & Box Model */
    display: block;
    padding: 8px 0px;
    text-align: center;
    text-decoration: none;
    /*transition: background-color 0.5s ease;*/
}

#list-guys {
    /* Color */
    border-bottom: 10px solid #b7cdb8;
}

#list-girls {
    /* Color */
    border-bottom: 10px solid #d2dbec;

}

.bridesmaids-section {
    background-image: url('../images/bridesmaid_brush.png');
    background-size: cover;
    background-repeat: no-repeat;
}

.wedding-party-description {
    min-height: 160px;
    margin: 0 40px 0 40px;
}


/*
 * REGISTRY STYLING
 */
 #sixth-body {
     /* Color */
     color: white;

     /* Display & Box Model */
     background-color: #000;
     background-image: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../images/registry_background.jpeg");
     background-size: cover;
     background-repeat: no-repeat;
     /*opacity: 0.75;*/
     margin: 0px;
     border-bottom: 4px solid #d9dada;
 }

 .registryRow {
    background-color:#AE0D46; 
    height:170px;
    padding-left:35px; 
    padding-right:35px;
 }

 .registryOption {
    background-color: white;
    height: 140%;
    margin-top: -2% !important;
    width: 22%;
    margin: 0 auto;
    border: 10px solid #C62C58;
    box-shadow: 5px 8px rgba(0, 0, 0, 0.55);
 }

 .registryOptionHeader {
    background-color:#C62C58; 
    position: absolute; 
    bottom: 0; 
    width: 100%; 
    margin-left: -15px
 }

 .registryOptionText {
    vertical-align: middle;
    font-family: 'Raleway';
 }

.registryOptionContent {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    visibility: hidden;
    background-color: black;
    opacity: 0;
    padding: 15% 0;
}

.registryOption:hover .registryOptionContent {
    visibility: visible;
    opacity: 0.75;
    animation: fadeInTwo 0.75s;
}

@keyframes fadeInTwo {
  from {
    opacity: 0;
  }

  to {
    opacity: 0.75;
  }
}



/*
 * ENGAGEMENT PHOTOS STYLING
 */

 #seventh-body {
     /* Color */
     background-color: #f2f4f3;

     /* Display & Box Model */
     border-bottom: 4px solid #d9dada;
     margin: 0;
 }

 .engagementPhoto {
    /*width: 100%;*/
    cursor: pointer;
 }



/* 
 * RESPONSIVE STYLING
 */

@media only screen and (max-width: 992px){
    .registryRow {
        background-color: transparent;
        height: auto;
        padding: 0;
    }

    .registryOption {
        margin-top: 0 !important;
        width: 85%;
        margin-left: 7.5% !important;
        margin-bottom: 7.5%;
    }

    /* umm */
    .carousel-header {
        position: relative;
        text-align: center;
        margin: 0 auto;
        width: 100%;
        background-color: rgba(54, 47, 45, 0.8);
        color: #fff;
        padding: 20px;
    }

}
/* ... */

